Added discussiona nd examples for conditionals and loops

--- a/python lessons/Fundamentals/Introduction.ipynb
+++ b/python lessons/Fundamentals/Introduction.ipynb
@@ -53,16 +53,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# VARIABLES\n",
+    "# We store values inside variables\n",
+    "# a variable can hold any kind of data type or structure\n",
+    "# we can refer to variables in other parts of our programs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "change me to a number\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_variable = \"change me to a number\"\n",
+    "# I can display what is inside example_variable by using \n",
+    "# the print command lets us do this\n",
+    "# try changing the value.  \n",
+    "print (example_variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Data types\n",
+    "# DATA TYPES\n",
     "# characters and numbers\n",
     "# characters: '0' '3' ';' '?' 'x' 'y' 'z'\n",
-    "# numbers (integers and decimals): 1 2 3 100 10000 10.0 56.9 -100 -3.765"
+    "# numbers (integers and decimals): 1 2 3 100 10000 10.0 56.9 -100 -3.765\n",
+    "# booleans: True, False"
    ]
   },
   {
@@ -73,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "# Data structures\n",
+    "# DATA STRUCTURES\n",
     "# strings, lists, dictionaries, and tuples\n"
    ]
   },
@@ -168,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +244,184 @@
     "add_things_list.append(\"one\")\n",
     "print (add_things_list)\n",
     "add_things_list.append(\"two\")\n",
-    "print (add_things_list)"
+    "print (add_things_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# OK great.  Now what can we do with all of this?  \n",
+    "# We can plug everything together with a bit of logic and python language\n",
+    "# and make a program that can do things like\n",
+    "# process data\n",
+    "# parse files\n",
+    "# data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# What kind of logic are we talking about?\n",
+    "# We are talking about something colled a \"logical structure\"\n",
+    "# there are two logical structures we will use in Python\n",
+    "# conditionals and loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Have a nice day.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditionals are how we make a decision in the program\n",
+    "# we do this with something called an \"if statement\"\n",
+    "# Here is an example\n",
+    "# try changing it_is_daytime from True and False and running this cell\n",
+    "\n",
+    "it_is_daytime = True # this is the variable that holds the current condition of it_is_daytime which is True or False \n",
+    "\n",
+    "if it_is_daytime:\n",
+    "    print (\"Have a nice day.\")\n",
+    "else:\n",
+    "    print (\"Have a nice night.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We do not know who you are\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what if the condition has more than two choices?\n",
+    "# python if-statments will let you do that with elif\n",
+    "# elif stands for \"else if\"\n",
+    "user_name = \"Joe\"\n",
+    "\n",
+    "if user_name == \"Marnee\":\n",
+    "    print (\"Marnee likes to program in Python and F#\")\n",
+    "elif user_name == \"Frank\":\n",
+    "    print (\"Frank does lots of interesting image processing in Python.\")\n",
+    "elif user_name == \"Julian\":\n",
+    "    print (\"Julian ia an awesome programmer at Cyverse\")\n",
+    "else:\n",
+    "    print (\"We do not know who you are\")\n",
+    "    \n",
+    "# for each possibility of user_name we have an if or else-if statment to check the value of the name\n",
+    "# and print a message accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# loops tell a program to do the same thing over and over again until a certain condition is met\n",
+    "# we can loop over cellections of things like lists or dictionaries\n",
+    "# or we can create a looping structure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "mango\n",
+      ">>looping>>\n",
+      "apple\n",
+      "banana\n",
+      "mango\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOOPING over a collection\n",
+    "# LIST\n",
+    "\n",
+    "# If I want to print a list of fruits, I could write out each print statment like this:\n",
+    "print(\"apple\")\n",
+    "print(\"banana\")\n",
+    "print(\"mango\")\n",
+    "\n",
+    "# or I could create a list of fruit\n",
+    "# loop over the list\n",
+    "# and print each item in the list\n",
+    "list_of_fruit = [\"apple\", \"banana\", \"mango\"]\n",
+    "\n",
+    "# this is how we write the loop\n",
+    "# \"fruit\" here is a variable that will hold each item in the list, the fruit, as we loop\n",
+    "# over the items in the list\n",
+    "print (\">>looping>>\")\n",
+    "for fruit in list_of_fruit:\n",
+    "    print (fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple price is 0.100000\n",
+      "banana price is 0.500000\n",
+      "mango price is 0.750000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOOPING over a collection\n",
+    "# DICTIONARY\n",
+    "\n",
+    "# We can do the same thing with a dictionary and each association in the dictionary\n",
+    "\n",
+    "fruit_price = {\"apple\" : 0.10, \"banana\" : 0.50, \"mango\" : 0.75}\n",
+    "for key, value in fruit_price.items():\n",
+    "    print (\"%s price is %f\" % (key, value))"
    ]
   },
   {
@@ -216,7 +431,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# That's it.  With just this page of programming data types, structures, and logic, you can build a program\n",
+    "# let's do that next with functions"
+   ]
   }
  ],
  "metadata": {
