Added example functions that look like mathematical functions in the Functions notebook

--- a/python lessons/Fundamentals/Functions.ipynb
+++ b/python lessons/Fundamentals/Functions.ipynb
@@ -16,6 +16,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "995\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a simple function that looks like a mathematical function\n",
+    "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "    return num1 + num2 # use the return statment to tell the function what to return\n",
+    "\n",
+    "print (add_two_numbers(905, 90))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "995\n"
+     ]
+    }
+   ],
+   "source": [
+    "# written a different way\n",
+    "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "    total = num1 + num2\n",
+    "    return total # use the return statment to tell the function what to return\n",
+    "\n",
+    "print (add_two_numbers(905, 90))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
