added comments and some discussion on testing and reusability

--- a/python lessons/Fundamentals/Functions.ipynb
+++ b/python lessons/Fundamentals/Functions.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Functions in Python are like functions in math\n",
+    "# Functions in Python are like mathematical functions\n",
     "# a function will take some values, do something to them or with them, and return a new value\n",
     "# Python functions can take any combination of data types and data structures\n",
     "# and return a single value that can be any data type or data structure"
@@ -55,10 +55,44 @@
    "source": [
     "# written a different way\n",
     "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
-    "    total = num1 + num2\n",
+    "    total = num1 + num2 # do the stuff\n",
     "    return total # use the return statment to tell the function what to return\n",
     "\n",
     "print (add_two_numbers(905, 90))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TESABILITY & REUSABILITY\n",
+    "# functions let us break down our programs into smaller bits that can be reused and tested\n",
+    "# Why is this important?\n",
+    "\n",
+    "# TESTABILITY\n",
+    "# imagine a really big program with lots of lines of code.  There is a problem somewhere in the code because you are not\n",
+    "# getting the results you expect\n",
+    "# how do you find it in your code?\n",
+    "# if your program is composed of lots of small functions that only do one thing\n",
+    "# then you can test each function individually\n",
+    "\n",
+    "# REUSABILITY\n",
+    "# imagine a really big program with lots of lines of code\n",
+    "# there is a section of code you want to use in a different part of the program\n",
+    "# if you just have one big program then you have to copy and paste that bit of code where you want it to go\n",
+    "# but if that bit was a function, you could just use that function\n",
+    "\n",
+    "# Always keep this in mind when writing programs\n",
+    "# Always try to write small functions that do one thing\n",
+    "# Your programs should be composed of lots of functions that do one thing\n",
+    "# Never have one giant function that does a million things\n",
+    "\n",
+    "# For example\n",
+    "# TODO <Can I think of an example??>"
    ]
   },
   {
