using markdown for disucssions and added section on range.  added some assessments.

--- a/python lessons/Fundamentals/Introduction.ipynb
+++ b/python lessons/Fundamentals/Introduction.ipynb
@@ -1,73 +1,69 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# What is Python and why would I use it?"
+    "### What is Python and why would I use it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Python is a programming language.  \n",
+    "\n",
+    "A programming language is a set words you can put together to tell a computer to do something.\n",
+    "\n",
+    "We like using Python in Software Carpentry Workshops for lots of reasons\n",
+    "\n",
+    "It is widely used in science\n",
+    "\n",
+    "Has a huge supporting community so there are lots of ways to learn and get help\n",
+    "\n",
+    "In my experience it is really nice to work with because it is easier to get started than other languages.  \n",
+    "\n",
+    "like this Jupyter Notebook.  Not a lot of languages have this kind of thing.  It's great."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Even if you aren't using Python in your work, you can use Python to learn the fundamentals of programming that will apply accross languages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### What are the fundamentals?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "VARIABLES\n",
+    "\n",
+    "We store values inside variables\n",
+    "a variable can hold any kind of data type or structure\n",
+    "we can refer to variables in other parts of our programs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Python is a programming language.  \n",
-    "# A programming language is a set words you can put together to tell a computer to do something.\n",
-    "# We like using Python Software Carpentry Workshops for lots of reasons\n",
-    "# It is widely used in science\n",
-    "# Has a huge supporting community so there are lots of ways to learn and get help\n",
-    "# In my experience it is really nice to work with because it is easier to get started than other languages.  \n",
-    "# like this Jupyter Notebook.  Not a lot of languages have this kind of thing.  It's great."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Even if you aren't using Python in your work, you can use Python to learn the fundamentals of programming that will apply\n",
-    "# accross languages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# What are the fundamentals?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# VARIABLES\n",
-    "# We store values inside variables\n",
-    "# a variable can hold any kind of data type or structure\n",
-    "# we can refer to variables in other parts of our programs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -76,12 +72,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "change me to a number\n"
+      "ljhkjhkjkgjkg\n"
      ]
     }
    ],
    "source": [
-    "example_variable = \"change me to a number\"\n",
+    "example_variable = \"ljhkjhkjkgjkg\"\n",
     "# I can display what is inside example_variable by using \n",
     "# the print command lets us do this\n",
     "# try changing the value.  \n",
@@ -89,30 +85,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# DATA TYPES\n",
-    "# characters and numbers\n",
-    "# characters: '0' '3' ';' '?' 'x' 'y' 'z'\n",
-    "# numbers (integers and decimals): 1 2 3 100 10000 10.0 56.9 -100 -3.765\n",
-    "# booleans: True, False"
+    "DATA TYPES\n",
+    "characters and numbers\n",
+    "characters: '0' '3' ';' '?' 'x' 'y' 'z'\n",
+    "numbers (integers and decimals): 1 2 3 100 10000 10.0 56.9 -100 -3.765\n",
+    "booleans: True, False"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# DATA STRUCTURES\n",
-    "# strings, lists, dictionaries, and tuples\n"
+    "DATA STRUCTURES\n",
+    "strings, lists, dictionaries, and tuples"
    ]
   },
   {
@@ -205,6 +197,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ASSESSMENT\n",
+    "Which one of these is a valid entry in a dictionary?\n",
+    "\n",
+    "1. \"key\" : \"value\"\n",
+    "2. \"GCBHSA: \"ldksghdklfghfdlgkfdhgfldkghfgfhd\"\n",
+    "3. \"900\" : \"key\" : \"value\"\n",
+    "4. 1 : 10000\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -249,37 +254,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# OK great.  Now what can we do with all of this?  \n",
-    "# We can plug everything together with a bit of logic and python language\n",
-    "# and make a program that can do things like\n",
-    "# process data\n",
-    "# parse files\n",
-    "# data analysis"
+    "# Add things to the list above:  add_things_list\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "OK great.  Now what can we do with all of this?  \n",
+    "\n",
+    "We can plug everything together with a bit of logic and python language\n",
+    "\n",
+    "and make a program that can do things like\n",
+    "\n",
+    "* process data\n",
+    "\n",
+    "* parse files\n",
+    "\n",
+    "* data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "# What kind of logic are we talking about?\n",
-    "# We are talking about something colled a \"logical structure\"\n",
-    "# there are two logical structures we will use in Python\n",
-    "# conditionals and loops"
+    "What kind of logic are we talking about?\n",
+    "\n",
+    "We are talking about something colled a \"logical structure\"\n",
+    "\n",
+    "There are two logical structures we will use\n",
+    "\n",
+    "* conditionals\n",
+    "* loops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Have a nice day.\n"
+      "Have a nice night.\n"
      ]
     }
    ],
@@ -296,14 +317,17 @@
     "# Conditionals are how we make a decision in the program\n",
     "# we do this with something called an \"if statement\"\n",
     "# Here is an example\n",
-    "# try changing it_is_daytime from True and False and running this cell\n",
     "\n",
-    "it_is_daytime = True # this is the variable that holds the current condition of it_is_daytime which is True or False \n",
+    "it_is_daytime = False # this is the variable that holds the current condition of it_is_daytime which is True or False \n",
     "\n",
     "if it_is_daytime:\n",
     "    print (\"Have a nice day.\")\n",
     "else:\n",
-    "    print (\"Have a nice night.\")"
+    "    print (\"Have a nice night.\")\n",
+    "    \n",
+    "# before running this cell\n",
+    "# what will happen if we change it_is_daytime to True?\n",
+    "# what will happen if we change it_is_daytime to False?"
    ]
   },
   {
@@ -322,12 +346,13 @@
     }
    ],
    "source": [
-    "# what if the condition has more than two choices?\n",
+    "# what if a condition has more than two choices? Does it have to use a boolean?\n",
     "# python if-statments will let you do that with elif\n",
     "# elif stands for \"else if\"\n",
     "user_name = \"Joe\"\n",
     "\n",
-    "if user_name == \"Marnee\":\n",
+    "if user_name == \"Marnee\":  #notice the double equals sign.  This is used to differentiate between comparing two values and\n",
+    "                            # and assiging a value to a variable\n",
     "    print (\"Marnee likes to program in Python and F#\")\n",
     "elif user_name == \"Frank\":\n",
     "    print (\"Frank does lots of interesting image processing in Python.\")\n",
@@ -426,13 +451,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOOPING a set number of times\n",
+    "# We can do this with range \n",
+    "# range automatically creates a list of numbers in a range\n",
+    "# here we have a list of 10 numbers starting with 0 and increasing by one until we have 10 numbers\n",
+    "# What will be printed\n",
+    "for x in range(0,10):\n",
+    "    print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# That's it.  With just this page of programming data types, structures, and logic, you can build a program\n",
+    "# That's it.  With just these data types, structures, and logic, you can build a program\n",
     "# let's do that next with functions"
    ]
   }
@@ -453,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
