Formatting and adding to functions notebook

--- a/python lessons/Fundamentals/Functions.ipynb
+++ b/python lessons/Fundamentals/Functions.ipynb
@@ -8,32 +8,27 @@
     "editable": true
    },
    "source": [
-    "Functions in Python are like mathematical functions\n",
-    "a function will take some values, do something to them or with them, and return something\n",
+    "# Functions\n",
+    "Functions in Python are like mathematical functions.\n",
+    "A function will take some values, do something to them or with them, and return something.\n",
     "Python functions can take any combination of data types and data structures\n",
     "and return a single value that can be any data type or data structure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "995\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# a simple function that looks like a mathematical function\n",
-    "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "# define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "def add_two_numbers(num1, num2):\n",
+    "    # Under the def must be indented\n",
     "    return num1 + num2 # use the return statment to tell the function what to return\n",
     "\n",
     "print (add_two_numbers(905, 90))"
@@ -41,31 +36,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "995\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# written a different way\n",
-    "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "# define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
+    "def add_two_numbers(num1, num2): \n",
     "    total = num1 + num2 # do the stuff\n",
+    "    # This is the body of the function\n",
     "    return total # use the return statment to tell the function what to return\n",
     "\n",
     "print (add_two_numbers(905, 90))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "“Adding” two strings produces their concatenation: 'a' + 'b' is 'ab'. Write a function called quote that takes two parameters called original and wrapper and returns a new string that has the wrapper character at the beginning and end of the original. A call to your function should look like this:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -73,45 +76,89 @@
    },
    "outputs": [],
    "source": [
-    "# TESABILITY & REUSABILITY\n",
-    "# functions let us break down our programs into smaller bits that can be reused and tested\n",
-    "# Why is this important?"
+    "# write your function here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(quote('name', '\"')) # returns --> \"name\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the variable s refers to a string, then s[0] is the string’s first character and s[-1] is its last. Write a function called outer that returns a string made up of just the first and last characters of its input. A call to your function should look like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write your function here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(outer('helium')) # returns --> hm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TESABILITY & REUSABILITY\n",
+    "Functions let us break down our programs into smaller bits that can be reused and tested\n",
+    "Why is this important?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
-    "# TESABILITY & REUSABILITY\n",
-    "# functions let us break down our programs into smaller bits that can be reused and tested\n",
-    "# Why is this important?\n",
+    "### TESTABILITY\n",
+    "Imagine a really big program with lots of lines of code.  \n",
+    "There is a problem somewhere in the code because you are not getting the results you expect\n",
+    "How do you find it in your code?\n",
+    "If your program is composed of lots of small functions that only do one thing then you can test each function individually\n",
     "\n",
-    "# TESTABILITY\n",
-    "# imagine a really big program with lots of lines of code.  There is a problem somewhere in the code because you are not\n",
-    "# getting the results you expect\n",
-    "# how do you find it in your code?\n",
-    "# if your program is composed of lots of small functions that only do one thing\n",
-    "# then you can test each function individually\n",
+    "### REUSABILITY\n",
+    "Imagine a really big program with lots of lines of code.\n",
+    "There is a section of code you want to use in a different part of the program.\n",
+    "If you just have one big program then you have to copy and paste that bit of code where you want it to go, but if that bit was a function, you could just use that function\n",
     "\n",
-    "# REUSABILITY\n",
-    "# imagine a really big program with lots of lines of code\n",
-    "# there is a section of code you want to use in a different part of the program\n",
-    "# if you just have one big program then you have to copy and paste that bit of code where you want it to go\n",
-    "# but if that bit was a function, you could just use that function\n",
-    "\n",
-    "# Always keep this in mind when writing programs\n",
-    "# Always try to write small functions that do one thing\n",
-    "# Your programs should be composed of lots of functions that do one thing\n",
-    "# Never have one giant function that does a million things\n",
-    "\n",
-    "# For example\n",
-    "# TODO <Can I think of an example??>"
+    "Always keep both of these concepts in mind when writing programs\n",
+    "Try to write small functions that do one thing\n",
+    "Your programs should be composed of lots of functions that do one thing\n",
+    "Never have one giant function that does a million things"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that converts temperatures from Fahrenheit to Kelvin. ((temp - 32) * (5/9)) + 273.15)"
    ]
   },
   {
@@ -119,6 +166,47 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write your function here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Documentation\n",
+    "Along the same lines as TESABILITY & REUSABILITY is documenation.\n",
+    "While python is easy to read and follow, you will either need to share\n",
+    "your code with others or you will forget what you did."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that converts temperatures from Kelvin into Celsius. temp_k - 273.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write your function here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -131,7 +219,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -153,7 +243,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -164,7 +256,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -175,7 +269,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -186,7 +282,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -197,7 +295,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -208,7 +308,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -219,7 +321,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -230,7 +334,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -241,7 +347,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
