adding titanic data and functions and how to use jupyter

--- a/python lessons/Fundamentals/Functions.ipynb
+++ b/python lessons/Fundamentals/Functions.ipynb
@@ -1,34 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Functions in Python are like mathematical functions.\n",
+    "\n",
+    "A function will take some values, do something to them or with them, and return a new value\n",
+    "\n",
+    "Python functions can take any combination of data types and data structures \n",
+    "and return a single value that can be any data type or data structure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Functions in Python are like mathematical functions\n",
-    "# a function will take some values, do something to them or with them, and return a new value\n",
-    "# Python functions can take any combination of data types and data structures\n",
-    "# and return a single value that can be any data type or data structure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "995\n"
-     ]
-    }
-   ],
    "source": [
     "# a simple function that looks like a mathematical function\n",
     "def add_two_numbers(num1, num2): #define a function called add_two_numbers that take 2 arguments: num1 and num2\n",
